# hmpps-ldap-automation-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  cli.py  env.py  logger.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: codeql.yml  format-python.yml  image-build.yml  python-checks.yml  release.yml  tag-and-release.yml
cli/: __init__.py  config.py  env.py  logger.py  logging.py
cli/ansible/: __init__.py
cli/database/: __init__.py
cli/git/: __init__.py
cli/ldap/: __init__.py  add_roles_to_username.py  rbac.py  test.py  update_user_home_areas.py  user.py
cli/ldap_automation/: add_roles_to_username.py  test.py
cli/ldap_cmds/: __init__.py  rbac.py  user.py
cli/template/: __init__.py
ldap_automation/: __init__.py  add_roles_to_username.py  test.py
